Mac下Maven在新的终端窗口下不生效解决方法

--- a/_config.yml
+++ b/_config.yml
@@ -17,10 +17,10 @@ side_bar_repo_limit: 5
 #      Author      #
 # ---------------- #
 author: Zhenyu Li
-organization: 卖好车
-organization_url: https://www.maihaoche.com
+organization: 旅宝
+organization_url: https://www.lvbaoyou.com
 location: Hangzhou, China
-email: jieming@maihaoche.com
+email: lizhenyu093@163.com
 
 # ---------------- #
 #    Navigation    #
